fix XCode C++ build issues

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ otool_disasm/disasm.xcodeproj/.svn/all-wcprops
 otool_disasm/disasm.xcodeproj/.svn/entries
 otool_disasm/disasm.xcodeproj/.svn/text-base/project.pbxproj.svn-base
 *.xcuserstate
+*.xcbkptlist
+*.xcworkspacedata
